--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
+    "mongojs": "^2.4.0",
     "nodemon": "^1.9.1"
   }
 }
